[package]
name = "octree-quantizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
image = "0.24.7"
rand = "0.8.5"
rgb = "0.8.37"
rs_ws281x = "0.5.1"
smart-leds = "0.3.0"
ws281x-rpi = "0.0.1"
