[package]
name = "octree-quantizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.8.1"
apodize = "1.0.0"
colorgrad = "0.6.2"
hound = "3.5.1"
hsl = "0.1.1"
image = "0.24.7"
rand = "0.8.5"
rs_ws281x = "0.5.1"
rustfft = "6.1.0"
spectrum-analyzer = "1.5.0"

[profile.dev]
opt-level = 3
